# kanibot

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: commands.rs  main.rs
