[package]
name = "kanibot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
teloxide = { version = "0.5", features = ["macros", "auto-send"] }
log = "0.4"
substring = "1.4.5"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
color-backtrace = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }